[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nopanic"
version = "0.1.1"
description = "Unified resilience toolkit for Python: retries, circuit breakers, timeouts, rate limits, bulkheads and request hedging. Zero dependencies, sync + async, one decorator API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Kadir Emre Dagdelen", email = "dagdelen.cyber@gmail.com" }]
keywords = [
    "resilience",
    "retry",
    "circuit-breaker",
    "rate-limit",
    "bulkhead",
    "timeout",
    "hedging",
    "fault-tolerance",
    "backoff",
    "asyncio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dagdelenemre/nopanic"
Repository = "https://github.com/dagdelenemre/nopanic"
Issues = "https://github.com/dagdelenemre/nopanic/issues"
Changelog = "https://github.com/dagdelenemre/nopanic/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/nopanic"]

# Allowlist, not blocklist: nothing outside this list can ever leak into
# the source distribution.
[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "LICENSE",
    "llms.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "S"]
# S311: backoff jitter uses the stdlib PRNG on purpose; it shapes load and
# is not a security boundary (see SECURITY.md).
ignore = ["S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # pytest asserts

[tool.mypy]
strict = true
python_version = "3.10"
